objects/Opp_to_Case_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_field_API_Name__c</fullName>
        <label>Case field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Field_API_Name__c</fullName>
        <label>Opp Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opp to Case Mapping</label>
</CustomObject>